--- a/20250326筆記.ipynb
+++ b/20250326筆記.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNH1edEnm4+6jHtIKxPQsYJ",
+      "authorship_tag": "ABX9TyMBEVlHkES0RBJiyQOMhcLC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -572,9 +572,66 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "type(data)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IfjDWETtRlH9",
+        "outputId": "691fb4aa-1770-4894-f3ae-db47dd2ef58b"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data['heteronyms']"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EGFMPNLCSqoN",
+        "outputId": "62d435b6-f7fe-44fe-c0c7-e60740acff6c"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[{'bopomofo': 'ㄐㄧㄠˋ ㄕˋ',\n",
+              "  'bopomofo2': 'jiàu shr̀',\n",
+              "  'definitions': [{'def': '學校裡進行教學活動的房間。',\n",
+              "    'example': ['如：「實驗教室」、「音樂教室」。'],\n",
+              "    'synonyms': '課堂,講堂'}],\n",
+              "  'pinyin': 'jiào shì'}]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "IfjDWETtRlH9"
+        "id": "6JGHMwNzSuI1"
       },
       "execution_count": null,
       "outputs": []
