--- a/20250326筆記.ipynb
+++ b/20250326筆記.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMBEVlHkES0RBJiyQOMhcLC",
+      "authorship_tag": "ABX9TyPqu4RRWQvSnbtSjTerrytn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -629,12 +629,186 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "type(data['heteronyms'])"
+      ],
       "metadata": {
-        "id": "6JGHMwNzSuI1"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6JGHMwNzSuI1",
+        "outputId": "5c8a1c7c-4793-4cf4-b8a9-9aa95f55a21a"
       },
-      "execution_count": null,
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "list"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data['heteronyms'][0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gEM6EalNTpRl",
+        "outputId": "6dd645d0-eab4-40a2-bfee-02b41d668e70"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'bopomofo': 'ㄐㄧㄠˋ ㄕˋ',\n",
+              " 'bopomofo2': 'jiàu shr̀',\n",
+              " 'definitions': [{'def': '學校裡進行教學活動的房間。',\n",
+              "   'example': ['如：「實驗教室」、「音樂教室」。'],\n",
+              "   'synonyms': '課堂,講堂'}],\n",
+              " 'pinyin': 'jiào shì'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data['heteronyms'][0]['definitions']"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ye3rIJPUTvYt",
+        "outputId": "76774bfe-dcc5-4101-b9f1-e2a1fa8402a7"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[{'def': '學校裡進行教學活動的房間。',\n",
+              "  'example': ['如：「實驗教室」、「音樂教室」。'],\n",
+              "  'synonyms': '課堂,講堂'}]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data['heteronyms'][0]['definitions'][0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-aX9Nx8mT7Et",
+        "outputId": "5401d5c5-f91e-442e-c46a-d8fe6cf2a856"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'def': '學校裡進行教學活動的房間。', 'example': ['如：「實驗教室」、「音樂教室」。'], 'synonyms': '課堂,講堂'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data['heteronyms'][0]['definitions'][0]['def']"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "FnkE_XHQUOZV",
+        "outputId": "1acfe5aa-b676-4717-e4ff-8b839758e673"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'學校裡進行教學活動的房間。'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def lookup(word):\n",
+        "    data = requests.get(f\"https://www.moedict.tw/uni/{word}\").json()\n",
+        "    return data['heteronyms'][0]['definitions'][0]['def']"
+      ],
+      "metadata": {
+        "id": "_VvVMYreUSll"
+      },
+      "execution_count": 33,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lookup('在天上飛的鳥')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 228
+        },
+        "id": "til9Gkt0UvpN",
+        "outputId": "cf5f6947-5fe7-411b-d8fe-57dd5db57dae"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "KeyError",
+          "evalue": "'heteronyms'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-37-e4fa6a855fa1>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlookup\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'在天上飛的鳥'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-33-609e52c63771>\u001b[0m in \u001b[0;36mlookup\u001b[0;34m(word)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mlookup\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mword\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrequests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"https://www.moedict.tw/uni/{word}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjson\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'heteronyms'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'definitions'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'def'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mKeyError\u001b[0m: 'heteronyms'"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -651,19 +825,147 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### if statements"
+      ],
+      "metadata": {
+        "id": "mVz9sCpcWu1y"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 44,
       "metadata": {
         "id": "N8SJPaVQI73B"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "a = 4\n",
+        "b = 4"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if a < b:\n",
+        "    print(\"a小於b\")"
+      ],
+      "metadata": {
+        "id": "AA0fGJqPL0CB"
+      },
+      "execution_count": 41,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if a < b:\n",
+        "    print(\"a小於b\")\n",
+        "else:\n",
+        "    print(\"a大於等於b\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fMAhnWfhXPp2",
+        "outputId": "4221d031-2b53-46eb-8cc4-880c6497b7fa"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a大於等於b\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if a < b:\n",
+        "    print(\"a小於b\")\n",
+        "elif a > b:\n",
+        "    print(\"a大於b\")\n",
+        "else:\n",
+        "    print(\"a等於b\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yabnep01XY0e",
+        "outputId": "6c854495-8a3c-49f0-a6a4-3a2e09444a35"
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a等於b\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 應用練習\n",
+        "\n",
+        "計算BMI，判斷健康狀況。\n",
+        "\n",
+        "$bmi = \\frac{體重(公斤)}{身高(公尺)^2}$\n",
+        "\n",
+        "|BMI|健康狀況|\n",
+        "|:-:|:--|\n",
+        "|bmi < 18|體重太輕|\n",
+        "|18 <= bmi < 24 | 體重正常|\n",
+        "|bmi >= 24 | 體重過重|"
+      ],
+      "metadata": {
+        "id": "zpJCmsyIX6yQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "w = 80\n",
+        "h = 1.83\n",
+        "\n",
+        "bmi = w/h**2\n",
+        "\n",
+        "bmi"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "COfuRukiXnD3",
+        "outputId": "4b23ed45-102f-44d4-c295-f6ba94f01d3b"
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "23.888440980620498"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "AA0fGJqPL0CB"
+        "id": "CGbLjCCtY0Z_"
       },
       "execution_count": null,
       "outputs": []
