--- a/20250326筆記.ipynb
+++ b/20250326筆記.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPqu4RRWQvSnbtSjTerrytn",
+      "authorship_tag": "ABX9TyOpWo9Jz7ZoFl2yNb+I10ab",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -963,9 +963,59 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "if bmi < 18:\n",
+        "    print(\"體重太輕\")\n",
+        "elif bmi >= 24:\n",
+        "    print(\"體重太重\")\n",
+        "else:\n",
+        "    print(\"正常體重\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CGbLjCCtY0Z_",
+        "outputId": "44eb45f4-7b4e-4ca7-dfe9-6c28cfcce46d"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "正常體重\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Exception Handling"
+      ],
+      "metadata": {
+        "id": "ujYk5LNPaDYD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def lookup02(word):\n",
+        "    data = requests.get(f\"https://www.moedict.tw/uni/{word}\").json()\n",
+        "    return data['heteronyms'][0]['definitions'][0]['def']"
+      ],
+      "metadata": {
+        "id": "uLS4RqHcZ3lg"
+      },
+      "execution_count": 48,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "CGbLjCCtY0Z_"
+        "id": "pcz2bmhqabdf"
       },
       "execution_count": null,
       "outputs": []
