--- a/20250326筆記.ipynb
+++ b/20250326筆記.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOpWo9Jz7ZoFl2yNb+I10ab",
+      "authorship_tag": "ABX9TyP7AGR8JR8qsYNz9yuuAg0Z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -999,23 +999,83 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "```python\n",
+        "try:\n",
+        "    程式區塊\n",
+        "except Exception as e:\n",
+        "    例外處理程式區塊\n",
+        "```"
+      ],
+      "metadata": {
+        "id": "d8amJnymary4"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 應用練習"
+      ],
+      "metadata": {
+        "id": "AUYztqbnamHp"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "def lookup02(word):\n",
+        "  try:\n",
         "    data = requests.get(f\"https://www.moedict.tw/uni/{word}\").json()\n",
-        "    return data['heteronyms'][0]['definitions'][0]['def']"
+        "    return data['heteronyms'][0]['definitions'][0]['def']\n",
+        "  except Exception as e:\n",
+        "    print(f\"發生錯誤，錯誤原因是{e}\")\n",
+        "    return e"
       ],
       "metadata": {
         "id": "uLS4RqHcZ3lg"
       },
-      "execution_count": 48,
+      "execution_count": 52,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lookup02('在天空飛的鳥')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pcz2bmhqabdf",
+        "outputId": "fd4f8248-906e-4ec3-b3c9-aad56f6edf07"
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "發生錯誤，錯誤原因是'heteronyms'\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "KeyError('heteronyms')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 53
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "pcz2bmhqabdf"
+        "id": "CWHVlwT1azPf"
       },
       "execution_count": null,
       "outputs": []
