--- a/20250326筆記.ipynb
+++ b/20250326筆記.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP7AGR8JR8qsYNz9yuuAg0Z",
+      "authorship_tag": "ABX9TyPC/CS6XXIcDPLoaJgz84mo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1072,10 +1072,208 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Loops(迴圈)\n",
+        "\n",
+        "* for loops\n",
+        "* while loops"
+      ],
+      "metadata": {
+        "id": "SJ6xXMb3b3z2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CWHVlwT1azPf",
+        "outputId": "b571d361-1ee4-4b2c-84b3-6765a2b08612"
+      },
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, 300, 4, 5]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 54
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(5):\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "obCFget5cdJs",
+        "outputId": "0bad03ba-6d79-46d2-c984-1f2fea9ce47c"
+      },
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in x:\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9kcUguPwcZEA",
+        "outputId": "278ef15a-a5e4-4cad-f97e-19b7e08cd627"
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "300\n",
+            "4\n",
+            "5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in y:\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-qP2cEvYcoIg",
+        "outputId": "935519d6-ef90-466c-be9b-26e12942a8dd"
+      },
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "d"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mYZRosFhc5Dq",
+        "outputId": "0858c47c-4d4e-4c5d-f79f-f4468a81e587"
+      },
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'cat': '貓咪', 'dog': '狗狗'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 59
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in d:\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZDz2JY-ScyDA",
+        "outputId": "439c6dfc-2fe9-441f-aec4-362604e0730e"
+      },
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "cat\n",
+            "dog\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in d:\n",
+        "  print(i, \"=>\", d[i])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_XlH5Gi3c3iQ",
+        "outputId": "a4855201-eebd-4f7e-eaf2-44509889a6c4"
+      },
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "cat => 貓咪\n",
+            "dog => 狗狗\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "CWHVlwT1azPf"
+        "id": "Xqoq3zFBdGMQ"
       },
       "execution_count": null,
       "outputs": []
